test/success/integration/_succ_expr_funct_call_1.hs
x :: Int
x = 3
y :: Int
y = x
main = print "hello"