test/fail/integration/_fail_sem_decl_value_1.hs
x = 3
main = print "hello"